--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" href="favicon.ico">
-    <title>GuClan Checker</title>
+    <title>Engtuns Checker</title>
     <link rel="stylesheet" href="css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="npm/%40mdi/font%40latest/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="aos%403.0.0-beta.6/dist/aos.css">
